Fix lang switcher z-index

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -12,6 +12,8 @@
     display: flex;
     align-items: center;
     justify-items: center;
+    position: relative;
+    z-index: 100;
   }
 
   &-brand {
